--- a/eCommerce/appsettings.json
+++ b/eCommerce/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnectionString": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=ecomerce-app-db;Integrated Security=True;Pooling=False"
+  },
   "AllowedHosts": "*"
 }
